fix: address code review feedback
- Fix release workflow to use inputs.version for manual dispatch
- Pin Node.js version to 22.12.0 in .nvmrc
- Expand .prettierignore with common patterns
- Rename apps/.gitkeep to apps/README.md for visibility
- Remove duplicate ESLint ignores from root config
- Align engines.pnpm with packageManager version
- Add placeholder test script to shared package
- Add EpochMillis and Intensity types with JSDoc
- Add language specifiers to README code blocks

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,38 @@
+# Dependencies and build outputs
 node_modules/
 dist/
 build/
 .next/
 coverage/
 .turbo/
+
+# Lock files (already formatted by package managers)
 pnpm-lock.yaml
+package-lock.json
+yarn.lock
 *.lock
+
+# VS Code extension builds
 *.vsix
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
