--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -32,6 +32,7 @@
     "check-types": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "test": "echo \"No tests yet\" && exit 0",
     "clean": "rimraf dist"
   },
   "dependencies": {
