--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "exports": {
+    ".": "./node.js",
     "./base": "./base.js",
     "./node": "./node.js",
     "./nextjs": "./nextjs.js"
@@ -13,15 +14,15 @@
     "*.js"
   ],
   "dependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.39.2",
     "@next/eslint-plugin-next": "^16.1.1",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "globals": "^16.5.0",
-    "typescript-eslint": "^8.21.0"
+    "typescript-eslint": "^8.51.0"
   },
   "peerDependencies": {
     "eslint": "^9.17.0",
