fix(ci): add placeholder env vars for Prisma generate and fix lint
- Add DATABASE_URL and SHADOW_DATABASE_URL placeholders for CI
- Fix unnecessary type assertion in auth.ts token decoding
- Prisma 7's config loader requires env vars even for generate

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
 
       - name: Generate Prisma Client
         run: pnpm --filter @devradar/server db:generate
+        env:
+          DATABASE_URL: 'postgresql://user:pass@localhost:5432/db'
+          SHADOW_DATABASE_URL: 'postgresql://user:pass@localhost:5432/shadow'
 
       - name: Lint
         run: pnpm lint
