fix(turbo): build dependencies before lint and check-types
Changed dependsOn from "topo" to "^build" so that workspace
packages like @devradar/shared are compiled before linting
packages that depend on them.

--- a/turbo.json
+++ b/turbo.json
@@ -13,13 +13,13 @@
       "env": ["NODE_ENV"]
     },
     "check-types": {
-      "dependsOn": ["topo"]
+      "dependsOn": ["^build"]
     },
     "lint": {
-      "dependsOn": ["topo"]
+      "dependsOn": ["^build"]
     },
     "lint:fix": {
-      "dependsOn": ["topo"]
+      "dependsOn": ["^build"]
     },
     "test": {
       "dependsOn": ["build"],
