--- a/apps/extension/.vscode/tasks.json
+++ b/apps/extension/.vscode/tasks.json
@@ -18,7 +18,7 @@
       "command": "pnpm",
       "args": ["dev"],
       "isBackground": true,
-      "problemMatcher": []
+      "problemMatcher": ["$tsc-watch"]
     }
   ]
 }
