fix: resolve TypeScript and ESLint errors in extension and server - Add AUTH/AUTH_SUCCESS to MessageType for WebSocket authentication - Implement missing TreeDataProvider methods in FriendsProvider - Fix exactOptionalPropertyTypes compatibility in buildActivityInfo - Install minimatch dependency, fix ESLint config extension - Remove async from sync handleHeartbeat function

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -223,7 +223,8 @@
     "clean": "rimraf dist out"
   },
   "dependencies": {
-    "@devradar/shared": "workspace:*"
+    "@devradar/shared": "workspace:*",
+    "minimatch": "^10.1.1"
   },
   "devDependencies": {
     "@devradar/eslint-config": "workspace:*",
