--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0 # Full history needed for tag operations and release notes
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -47,6 +49,19 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Create and push tag (manual release)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag "v${{ github.event.inputs.version }}"
+          git push origin "v${{ github.event.inputs.version }}"
+
+      - name: Generate Prisma Client
+        run: pnpm --filter @devradar/server db:generate
+        env:
+          DATABASE_URL: 'postgresql://user:pass@localhost:5432/db'
+
       - name: Build all packages
         run: pnpm build
 
@@ -55,14 +70,13 @@ jobs:
         env:
           CI: true
 
-      # Extension packaging (will be configured in Phase 1)
-      # - name: Package VS Code Extension
-      #   run: pnpm --filter @devradar/extension package
+      - name: Package VS Code Extension
+        run: pnpm --filter @devradar/extension package
 
-      # - name: Publish to VS Code Marketplace
-      #   run: pnpm --filter @devradar/extension publish
-      #   env:
-      #     VSCE_PAT: ${{ secrets.VSCE_PAT }}
+      - name: Publish to VS Code Marketplace
+        run: pnpm --filter @devradar/extension publish
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -70,5 +84,5 @@ jobs:
         with:
           tag_name: ${{ github.event_name == 'workflow_dispatch' && format('v{0}', env.RELEASE_VERSION) || github.ref_name }}
           generate_release_notes: true
-          # files: |
-          #   apps/extension/*.vsix
+          files: |
+            apps/extension/*.vsix
