--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "devradar",
   "version": "0.0.0",
   "private": true,
+  "license": "AGPL-3.0",
   "packageManager": "pnpm@10.27.0",
   "engines": {
     "node": ">=22.0.0",
