--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -2,7 +2,7 @@
   "name": "devradar",
   "displayName": "DevRadar",
   "description": "See what your friends are coding in real-time",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "publisher": "devradar",
   "license": "AGPL-3.0-or-later",
   "private": true,
@@ -146,6 +146,11 @@
         "title": "Unfriend",
         "category": "DevRadar",
         "icon": "$(person-remove)"
+      },
+      {
+        "command": "devradar.focusFriendRequests",
+        "title": "Focus Friend Requests",
+        "category": "DevRadar"
       }
     ],
     "menus": {
