--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-# ==================================
-# DevRadar Environment Configuration
-# ==================================
-
 # Node Environment
 NODE_ENV=development
 
@@ -19,6 +15,9 @@ REDIS_URL=redis://localhost:6379
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 GITHUB_CALLBACK_URL=http://localhost:3000/auth/callback
+# GitHub Webhooks (for Boss Battles - achievements from GitHub events)
+# Generate with: openssl rand -hex 32
+GITHUB_WEBHOOK_SECRET=your_webhook_secret_for_github
 
 # JWT
 JWT_SECRET=your_super_secret_jwt_key_change_in_production
