feat(config): add Slack integration environment variables

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,9 @@ WS_PORT=3001
 
 # Logging
 LOG_LEVEL=debug
+
+# Slack Integration (Phase 3 - Optional)
+# Create a Slack App at https://api.slack.com/apps
+SLACK_CLIENT_ID=
+SLACK_CLIENT_SECRET=
+SLACK_SIGNING_SECRET=
