--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,6 +28,8 @@
     "@fastify/websocket": "^11.2.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@slack/types": "^2.19.0",
+    "@slack/web-api": "^7.13.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.6.2",
     "ioredis": "^5.8.2",
