feat(billing): configure Razorpay environment and database schema
- Add Razorpay environment variables to config
- Update Prisma schema with razorpayCustomerId, razorpaySubscriptionId, razorpayCurrentPeriodEnd
- Add Razorpay keys to .env.example documentation

--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,26 @@ WS_PORT=3001
 # Logging
 LOG_LEVEL=debug
 
-# Slack Integration (Phase 3 - Optional)
+# Slack Integration (Optional)
 # Create a Slack App at https://api.slack.com/apps
 SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
 SLACK_SIGNING_SECRET=
+
+# Razorpay Billing 
+# Get your API keys from https://dashboard.razorpay.com/#/app/keys
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+RAZORPAY_WEBHOOK_SECRET=your_razorpay_webhook_secret
+
+# Razorpay Plan IDs 
+RAZORPAY_PRO_MONTHLY_PLAN_ID=plan_pro_monthly
+RAZORPAY_PRO_ANNUAL_PLAN_ID=plan_pro_annual
+RAZORPAY_TEAM_MONTHLY_PLAN_ID=plan_team_monthly
+RAZORPAY_TEAM_ANNUAL_PLAN_ID=plan_team_annual
+
+# Web App URL (for redirect URLs)
+WEB_APP_URL=http://localhost:3000
+
+# Frontend Environment Variables
+NEXT_PUBLIC_RAZORPAY_KEY_ID=your_razorpay_key_id
