--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,14 +30,15 @@
     "@prisma/client": "^7.2.0",
     "@slack/types": "^2.16.0",
     "@slack/web-api": "^7.12.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "ioredis": "^5.8.2",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
+    "razorpay": "^2.9.6",
     "ws": "^8.19.0",
-    "zod": "^3.24.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@devradar/eslint-config": "workspace:*",
@@ -45,7 +46,7 @@
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "@types/ws": "^8.18.1",
-    "esbuild": "^0.24.2",
+    "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "prisma": "^7.2.0",
     "rimraf": "^6.1.2",
