--- a/.env.example
+++ b/.env.example
@@ -1,54 +1,15 @@
-# Node Environment
-NODE_ENV=development
+# ============================================
+# DevRadar Environment Configuration
+# ============================================
 
-# Server Configuration
-PORT=3000
-HOST=localhost
-
-# Database (PostgreSQL)
-DATABASE_URL=postgresql://devradar:devradar@localhost:5432/devradar?schema=public
-
-# Redis
-REDIS_URL=redis://localhost:6379
-
-# GitHub OAuth
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
-GITHUB_CALLBACK_URL=http://localhost:3000/auth/callback
-# GitHub Webhooks (for Boss Battles - achievements from GitHub events)
-# Generate with: openssl rand -hex 32
-GITHUB_WEBHOOK_SECRET=your_webhook_secret_for_github
-
-# JWT
-JWT_SECRET=your_super_secret_jwt_key_change_in_production
-JWT_EXPIRES_IN=7d
-
-# WebSocket
-WS_PORT=3001
-
-# Logging
-LOG_LEVEL=debug
-
-# Slack Integration (Optional)
-# Create a Slack App at https://api.slack.com/apps
-SLACK_CLIENT_ID=
-SLACK_CLIENT_SECRET=
-SLACK_SIGNING_SECRET=
-
-# Razorpay Billing 
-# Get your API keys from https://dashboard.razorpay.com/#/app/keys
-RAZORPAY_KEY_ID=your_razorpay_key_id
-RAZORPAY_KEY_SECRET=your_razorpay_key_secret
-RAZORPAY_WEBHOOK_SECRET=your_razorpay_webhook_secret
-
-# Razorpay Plan IDs 
-RAZORPAY_PRO_MONTHLY_PLAN_ID=plan_pro_monthly
-RAZORPAY_PRO_ANNUAL_PLAN_ID=plan_pro_annual
-RAZORPAY_TEAM_MONTHLY_PLAN_ID=plan_team_monthly
-RAZORPAY_TEAM_ANNUAL_PLAN_ID=plan_team_annual
-
-# Web App URL (for redirect URLs)
-WEB_APP_URL=http://localhost:3000
-
-# Frontend Environment Variables
-NEXT_PUBLIC_RAZORPAY_KEY_ID=your_razorpay_key_id
+# Environment variables are now organized per application:
+#
+# - Server variables:  apps/server/.env.example
+# - Web variables:     apps/web/.env.example
+#
+# Copy the appropriate .env.example to .env in each app directory
+# and fill in your values before running locally.
+#
+# For production deployment:
+# - Vercel: Add NEXT_PUBLIC_RAZORPAY_KEY_ID in Vercel dashboard
+# - Koyeb:  Add all vars from apps/server/.env.example in Koyeb dashboard
