--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -32,6 +32,7 @@
     "@slack/web-api": "^7.12.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "fastify-raw-body": "^5.0.0",
     "ioredis": "^5.8.2",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
