--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -16,6 +16,9 @@ NEXT_PUBLIC_RAZORPAY_KEY_ID=your_razorpay_key_id
 # Web App URL (for links and redirects)
 NEXT_PUBLIC_WEB_APP_URL=http://localhost:3000
 
+# WebSocket URL (for real-time features)
+NEXT_PUBLIC_WS_URL=ws://localhost:3000/ws
+
 # -----------------------------------------------------------------------------
 # PRODUCTION VALUES (update these when deploying to Vercel)
 # -----------------------------------------------------------------------------
