add production websocket url example to env

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -24,3 +24,4 @@ NEXT_PUBLIC_WS_URL=ws://localhost:3000/ws
 # -----------------------------------------------------------------------------
 # NEXT_PUBLIC_API_URL=https://your-koyeb-app.koyeb.app
 # NEXT_PUBLIC_WEB_APP_URL=https://devradar.io
+# NEXT_PUBLIC_WS_URL=wss://your-koyeb-app.koyeb.app/ws
